--- a/migrant-student-education.qmd
+++ b/migrant-student-education.qmd
@@ -87,6 +87,9 @@ set.seed(1234)
 # Generate r-references.bib file 
 papaja::r_refs(file = "r-references.bib")
 
+# Set knitr options, hide warnings and messages
+knitr::opts_chunk$set(warning=FALSE, message=FALSE)
+
 # source setting-up r.script
 source("migrant-student-education-setting.R")
 ```
@@ -231,7 +234,6 @@ The dependent variable in our study is the academic performance, which is measur
 #| fig-cap: "Comparison of the distribution of Chinese, Mathematics, and English exam scores (Migrant vs. Local students)"
 #| fig-width: 5
 #| fig-height: 4
-#| fig-pos: H
 
 
 ## Organize the dataframe in to a form better for ggplot function to generate plots
@@ -268,6 +270,8 @@ As for the independent variable, we take three aspects into account: the amount 
 #| tbl-caption: "Two-sample t-test on the mean per-student funding across program types"
 #| tbl-pos: H
 
+library(kableExtra)  
+
 # Two-sample t-test of per-student funding by migrant status
 ttest2_per <- t.test(
        filter(w2clean, mig_status == "1")$per_st_funding, # local students
@@ -284,12 +288,9 @@ ttest2_per_df <- data.frame(
   check.names = FALSE
 )
 
-# use flextable to show the results
-tibble_per <- ttest2_per_df %>%
-  flextable() %>%  # convert the dataframe into flextable
-  autofit()  # automatically adjust table width
-
-print(tibble_per)
+kable(ttest2_per_df,
+          format = "latex", booktabs = TRUE) %>%
+          kable_styling(latex_options = "scale_down")
 
 ```
 
@@ -298,14 +299,14 @@ print(tibble_per)
 
 We employ a **Multilevel Model (MLM)** to see the effect of independent variables on the academic performance gap between migrant students and local students. Since migrant students and local students are clustered in different schools, MLM can provide a hierarchical model fitness that can take cluster effect into account [@antonoplisStudyingSocioeconomicStatus2023].
 We will implement random intercept, fixed slope model to examine the research question primarily. When analyzing data in later procedures, MLM can be adjusted with improvement in significance tests and improvement in fit. The two-level model can be put in an incorporated formula:
-$$ 
-examscore_{ij}= \beta_0 + \beta_1 \cdot mig\_status + \beta_2 \cdot centgov\_fund\_pct_j + \beta_3 \cdot prefgov\_fund\_pct_j + \beta_4 \cdot countgov\_fund\_pct_j \\
-+ \beta_5 \cdot per\_st\_funding_j + \beta_6 \cdot mig\_funding_j + \beta_7 \cdot same\_charge\_std_j + \beta_8 \cdot mig\_subsidy_j \\
-+ \beta_9 \cdot (mig\_status_{ij} \times centgov\_fund\_pct_j) + \beta_{10} \cdot (mig\_status_{ij} \times prefgov\_fund\_pct_j)\\
-+ \beta_{11} \cdot (mig\_status_{ij} \times countgov\_fund\_pct_j) + \beta_{12} \cdot (mig\_status_{ij} \times per\_st\_funding_j)\\
-+ \beta_{13} \cdot (mig\_status_{ij} \times mig\_funding_j) + \beta_{14} \cdot (mig\_status_{ij} \times same\_charge\_std_j)\\
-+ \beta_{15} \cdot (mig\_status_{ij} \times mig\_subsidy_j) + u_j + \epsilon_{ij}
-$$
+
+<!-- Forgive me for writing the function so ugly. It's so long and the only way latex won't return error when rendering pdf is to keep it this way -->
+$$ examscore_{ij}= \beta_0 + \beta_1 \cdot mig\_status + \beta_2 \cdot centgov\_fund\_pct_j + \beta_3 \cdot prefgov\_fund\_pct_j $$
+$$+\beta_4 \cdot countgov\_fund\_pct_j + \beta_5 \cdot per\_st\_funding_j + \beta_6 \cdot mig\_funding_j + \beta_7 \cdot same\_charge\_std_j$$
+$$ + \beta_8 \cdot mig\_subsidy_j  + \beta_9 \cdot (mig\_status_{ij} \times centgov\_fund\_pct_j) $$
+$$ + \beta_{10} \cdot (mig\_status_{ij} \times prefgov\_fund\_pct_j) + \beta_{11} \cdot (mig\_status_{ij} \times countgov\_fund\_pct_j) $$
+$$ + \beta_{12} \cdot (mig\_status_{ij} \times per\_st\_funding_j)  + \beta_{13} \cdot (mig\_status_{ij} \times mig\_funding_j) $$
+$$ + \beta_{14} \cdot (mig\_status_{ij} \times same\_charge\_std_j)  + \beta_{15} \cdot (mig\_status_{ij} \times mig\_subsidy_j) + u_j + \epsilon_{ij} $$
 In this funtion, we denote *i* as the individual student and *j* as the school. The estimate for the fixed effect are as follows: (1) $\beta_0$ is the overall intercept; (2) $\beta_1$ stands for the effect of being a migrant student; (3) $\beta_2$ to $\beta_8$ extimate the effects of independent variables; (4) $\beta_9$ to $\beta_15$ extimate the interaction effects of independent variables and migrant status; (5) $u_j$ is the random intercept for school *j*; and (6) $\epsilon_{ij}$ represents the residual error.
 
 # Analysis Results
@@ -313,6 +314,9 @@ In this funtion, we denote *i* as the individual student and *j* as the school. 
 ```{r}
 #| label: fig-ggplot-chinese
 #| fig-cap: "The linear relation between per-student funding and average Chinese exam scores across two student groups"
+#| fig-width: 6
+#| fig-height: 5
+
 
 # compute geom_smooth with two facets
 ggplot(w2clean, aes(x = per_st_funding, y = w2chnstd, color = factor(mig_status))) +
@@ -321,7 +325,8 @@ ggplot(w2clean, aes(x = per_st_funding, y = w2chnstd, color = factor(mig_status)
   geom_point(alpha = 0.5, size = 0.5 ) +  
   
   # adding black smooth line and "se" to show confidence intervals
-  geom_smooth(method = "lm", se = TRUE, color = "black", linewidth = 0.5) +  
+  # hide the formula so it won't appear in PDF
+  geom_smooth(method = "lm", se = TRUE, method.args = list(), color = "black", linewidth = 0.5) +  
   
   # seperate the plot in two facets (by migrant status)
   facet_wrap(~ mig_status, labeller = labeller(mig_status = c("1" = "Local Students", "2" = "Migrant Students"))) +  
